@@ -42,22 +42,36 @@
 	{
 	  result = [self openFile: [url path]];
 	}
-      else if ([[url description] hasPrefix: @"http://"] ||
-	       [[url description] hasPrefix: @"https://"])
+      else if ([[url scheme] isEqualToString: @"http"] ||
+	       [[url scheme] isEqualToString: @"https"])
 	{
-	  NSTask* browser;
 	  NSString* browserPath;
 	  
 	  browserPath =
 	    [[NSUserDefaults standardUserDefaults] stringForKey: @"WebBrowser"];
+
+          if (browserPath == nil) {
+            /* Try firefox */
+            NSFileManager *fm = [NSFileManager defaultManager];
+            NSProcessInfo *pi = [NSProcessInfo processInfo];
+            NSEnumerator *e = [[[[pi environment] objectForKey: @"PATH"] componentsSeparatedByString: @":"] objectEnumerator];
+            NSString *p;
+            while ((p = [e nextObject])) {
+              p = [p stringByTrimmingCharactersInSet: [NSCharacterSet whitespaceCharacterSet]];
+              p = [p stringByAppendingPathComponent: @"firefox"];
+              if ([fm fileExistsAtPath: p]) {
+                browserPath = p;
+                break;
+              }
+            }
+          }
 	  
 	  if (browserPath != nil)
-	    {
-	      browser =
-		[NSTask launchedTaskWithLaunchPath: browserPath
-			arguments: [NSArray arrayWithObject: [url description] ] ];
-	      result = YES;
-	    }
+	  {
+            [NSTask launchedTaskWithLaunchPath: browserPath
+		arguments: [NSArray arrayWithObject: [url absoluteString]]];
+            result = YES;
+          }
 	  else
 	    {
 	      result = NO;
