@@ -6,6 +6,7 @@ Nov-05-2006 Yen-Ju Chen <yjchenx at gmail>
 
 	* Open link with entery key.
 	* Remove HTML tag (temporary fix).
+	* Open link with firefox as default.
 
 Oct-30-2006 Yen-Ju Chen <yjchenx at gmail>
 
